--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,93 +3,97 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/ic_main_bg"
-    android:weightSum="3"
-    android:orientation="vertical">
+    android:background="@drawable/ic_bg"
+    android:orientation="vertical"
+    android:weightSum="3">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_weight="0.5"
+        android:gravity="center"
         android:orientation="vertical">
-    <TextView
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        tools:text="Todays FIFA World Cup Final Match"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        tools:text="India won the toss and select to bat first"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Todays FIFA World Cup Final Match"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
     </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.2"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_weight="2"
+            android:gravity="center"
             android:orientation="vertical"
             android:padding="5dp">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.4"
-                android:adjustViewBounds="true"
-                tools:src="@drawable/indian"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_weight="1.3"
+                android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_weight="0.3"
-                android:padding="8dp"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                tools:text="INDIA"/>
+                android:orientation="vertical">
 
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/spain" />
+
+                <TextView
+                    android:id="@+id/tvTeamName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:text="SPAIN"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.3"
-                android:weightSum="0.99"
                 android:orientation="horizontal"
-                >
+                android:weightSum="0.99">
 
-            <ImageView
-                android:id="@+id/imgSubscoreTeamOne"
+                <ImageView
+                    android:id="@+id/imgSubscoreTeamOne"
 
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="0.33"
-                android:gravity="center"
-                android:padding="5dp"
-               android:src="@drawable/thumsdown"/>
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="0.33"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:src="@drawable/thumsdown" />
+
                 <TextView
                     android:id="@+id/tvScoreTeamOne"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.33"
                     android:gravity="center"
-                    android:textStyle="bold"
                     android:textSize="25dp"
+                    android:textStyle="bold"
                     android:visibility="visible"
-                    tools:text="3"/>
+                    tools:text="3" />
 
                 <ImageView
                     android:id="@+id/imgAddscoreTeamOne"
@@ -97,8 +101,8 @@
                     android:layout_height="fill_parent"
                     android:layout_weight="0.33"
                     android:gravity="center"
-android:padding="5dp"
-                    android:src="@drawable/thumsup"/>
+                    android:padding="5dp"
+                    android:src="@drawable/thumsup" />
 
             </LinearLayout>
         </LinearLayout>
@@ -106,20 +110,22 @@ android:padding="5dp"
         <TextView
             android:id="@+id/tvScoreTeamOneFinal"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="0.45"
             android:gravity="center"
-            android:textStyle="bold"
             android:textSize="20dp"
-            tools:text="3"/>
+            android:textStyle="bold"
+            tools:text="3" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:gravity="center"
-            android:textStyle="bold"
+            android:text="-"
             android:textSize="20dp"
-            tools:text="-"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvScoreTeamTwoFinal"
@@ -127,9 +133,9 @@ android:padding="5dp"
             android:layout_height="match_parent"
             android:layout_weight="0.45"
             android:gravity="center"
-            android:textStyle="bold"
             android:textSize="20dp"
-            tools:text="4"/>
+            android:textStyle="bold"
+            tools:text="4" />
 
 
         <LinearLayout
@@ -138,31 +144,39 @@ android:padding="5dp"
             android:layout_weight="2"
             android:orientation="vertical"
             android:padding="5dp">
-
-            <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.4"
-                android:adjustViewBounds="true"
-                tools:src="@drawable/southafrica"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_weight="1.7"
+                android:layout_gravity="center"
                 android:gravity="center"
-                android:layout_weight="0.3"
-                android:padding="8dp"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                tools:text="SOUTH AFRICA"/>
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/brazil" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:text="BRAZIL"
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.3"
-                android:weightSum="0.99"
                 android:orientation="horizontal"
-                >
+                android:weightSum="0.99">
 
                 <ImageView
                     android:id="@+id/imgSubscoreTeamTwo"
@@ -172,17 +186,18 @@ android:padding="5dp"
                     android:layout_weight="0.33"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/thumsdown"/>
+                    android:src="@drawable/thumsdown" />
+
                 <TextView
                     android:id="@+id/tvScoreTeamTwo"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.33"
                     android:gravity="center"
-                    android:textStyle="bold"
                     android:textSize="25dp"
+                    android:textStyle="bold"
                     android:visibility="visible"
-                    tools:text="4"/>
+                    tools:text="4" />
 
                 <ImageView
                     android:id="@+id/imgAddscoreTeamTwo"
@@ -192,9 +207,136 @@ android:padding="5dp"
                     android:layout_weight="0.33"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/thumsup"/>
+                    android:src="@drawable/thumsup" />
 
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.7"
+        android:orientation="vertical">
+
+
+
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:weightSum="3"
+            >
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="TEAM A"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="18dp"
+
+                ></TextView>
+            <Switch
+                android:id="@+id/switchChange"
+                android:layout_width="0dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                ></Switch>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="TEAM 2"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="18dp"
+
+                ></TextView>
+
+
+
+        </LinearLayout>
+        <RadioGroup
+            android:id="@+id/rgScore"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/rbTwoGoal"
+
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="2 Goal"
+                android:checked="true">
+
+
+            </RadioButton>
+
+            <RadioButton
+                android:id="@+id/rbThreeGoal"
+
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="3 Goal"
+                android:checked="false">
+
+
+            </RadioButton>
+
+            <RadioButton
+                android:id="@+id/rbFourGoal"
+
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="4 Goal"
+                android:checked="false">
+
+
+            </RadioButton>
+            <RadioButton
+                android:id="@+id/rbFiveGoal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="5 Goal"
+                android:checked="false">
+            </RadioButton>
+
+
+        </RadioGroup>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1">
+        <Button
+            android:id="@+id/btAdd"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:text="Add Goal"></Button>
+            <Button
+                android:id="@+id/btDes"
+                android:layout_width="0dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="0.5"
+                android:layout_height="wrap_content"
+                android:text="Minus Goal"></Button>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
 </LinearLayout>
