--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+
+        <color name="primaryColor">#dd2c00</color>
+        <color name="primaryLightColor">#ff6434</color>
+        <color name="primaryDarkColor">#a30000</color>
+        <color name="primaryTextColor">#ffffff</color>
 </resources>
