--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,31 @@
     <style name="Theme.GoLive.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.GoLive.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    
+    <style name="stTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">17dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">sans-serif</item>
+    </style>
+
+
+
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="56dp"
+    android:textColor="@color/white"
+    android:textSize="17sp"
+    android:paddingTop="15dp"
+    android:paddingBottom="15dp"
+    android:paddingStart="25dp"
+    android:paddingEnd="25dp"
+    android:focusable="true"
+    android:textAllCaps="false"
+    android:background="@drawable/rounded_btn"
+    android:text="View Reports"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
 </resources>
