--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,34 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/stTextViewLabel"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Todays FIFA World Cup Final Match"
-            android:textSize="18dp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
 
+            <TextView
+                style="@style/stTextViewLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nightmode" />
+
+            <Switch
+                android:id="@+id/swNightMode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp">
+
+            </Switch>
+        </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -45,8 +64,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.3"
                 android:layout_gravity="center"
+                android:layout_weight="1.3"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -59,14 +78,12 @@
 
                 <TextView
                     android:id="@+id/tvTeamName"
+                    style="@style/stTextViewLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:text="SPAIN"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:text="@string/teamA" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
@@ -86,14 +103,11 @@
 
                 <TextView
                     android:id="@+id/tvScoreTeamOne"
+                    style="@style/stCustomTextView"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.33"
-                    android:gravity="center"
-                    android:textSize="25dp"
-                    android:textStyle="bold"
-                    android:visibility="visible"
-                    tools:text="3" />
+                    android:text="@string/teamAGoal" />
 
                 <ImageView
                     android:id="@+id/imgAddscoreTeamOne"
@@ -109,33 +123,26 @@
 
         <TextView
             android:id="@+id/tvScoreTeamOneFinal"
+            style="@style/stCustomTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="0.45"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            tools:text="3" />
+            android:text="@string/_3" />
 
         <TextView
+            style="@style/stTextViewLabel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.1"
-            android:gravity="center"
-            android:text="-"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:text="@string/difference" />
 
         <TextView
             android:id="@+id/tvScoreTeamTwoFinal"
+            style="@style/stCustomTextView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.45"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            tools:text="4" />
+            android:text="@string/_4" />
 
 
         <LinearLayout
@@ -144,11 +151,12 @@
             android:layout_weight="2"
             android:orientation="vertical"
             android:padding="5dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1.7"
                 android:layout_gravity="center"
+                android:layout_weight="1.7"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -160,15 +168,11 @@
                     android:src="@drawable/brazil" />
 
                 <TextView
+                    style="@style/stTextViewLabel"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:text="BRAZIL"
-                    android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:text="@string/TeamB" />
             </LinearLayout>
-
 
 
             <LinearLayout
@@ -190,18 +194,14 @@
 
                 <TextView
                     android:id="@+id/tvScoreTeamTwo"
+                    style="@style/stCustomTextView"
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.33"
-                    android:gravity="center"
-                    android:textSize="25dp"
-                    android:textStyle="bold"
-                    android:visibility="visible"
-                    tools:text="4" />
+                    android:text="@string/TeamBGoal" />
 
                 <ImageView
                     android:id="@+id/imgAddscoreTeamTwo"
-
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.33"
@@ -221,63 +221,53 @@
         android:orientation="vertical">
 
 
-
         <LinearLayout
-            android:layout_marginTop="20dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center"
+            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:weightSum="3"
-            >
+            android:orientation="horizontal"
+            android:weightSum="3">
 
             <TextView
+                style="@style/stTextViewLabel"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="TEAM A"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="18dp"
+                android:layout_weight="1"
+                android:text="@string/team_a"></TextView>
 
-                ></TextView>
             <Switch
                 android:id="@+id/switchChange"
                 android:layout_width="0dp"
-                android:layout_gravity="center"
-                android:gravity="center"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                ></Switch>
+                android:gravity="center"></Switch>
+
             <TextView
+                style="@style/stTextViewLabel"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="TEAM 2"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="18dp"
-
-                ></TextView>
-
+                android:layout_weight="1"
+                android:text="@string/team_2"></TextView>
 
 
         </LinearLayout>
+
         <RadioGroup
             android:id="@+id/rgScore"
-            android:layout_gravity="center"
-            android:gravity="center"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center">
 
             <RadioButton
                 android:id="@+id/rbTwoGoal"
-
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="2 Goal"
-                android:checked="true">
+                android:checked="true"
+                android:text="@string/_2_goal">
 
 
             </RadioButton>
@@ -287,8 +277,8 @@
 
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="3 Goal"
-                android:checked="false">
+                android:checked="false"
+                android:text="@string/_3_goal">
 
 
             </RadioButton>
@@ -298,42 +288,43 @@
 
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="4 Goal"
-                android:checked="false">
+                android:checked="false"
+                android:text="@string/_4_goal">
 
 
             </RadioButton>
+
             <RadioButton
                 android:id="@+id/rbFiveGoal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="5 Goal"
-                android:checked="false">
-            </RadioButton>
+                android:checked="false"
+                android:text="@string/_5_goal"></RadioButton>
 
 
         </RadioGroup>
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
-        <Button
-            android:id="@+id/btAdd"
-            android:layout_width="0dp"
-            android:layout_weight="0.5"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:text="Add Goal"></Button>
+
+            <Button
+                android:id="@+id/btAdd"
+                style="@style/stButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:text="@string/add_goal"></Button>
+
             <Button
                 android:id="@+id/btDes"
+                style="@style/stButton"
                 android:layout_width="0dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.5"
                 android:layout_height="wrap_content"
-                android:text="Minus Goal"></Button>
+                android:layout_weight="0.5"
+                android:text="@string/minus_goal"></Button>
 
         </LinearLayout>
     </LinearLayout>
