--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,11 @@
         <color name="primaryLightColor">#ff6434</color>
         <color name="primaryDarkColor">#a30000</color>
         <color name="primaryTextColor">#ffffff</color>
+    <color name="btn_primary">#E91E63</color>
+    <color name="btn_gradient_strtcolor">#E91E63</color>
+    <color name="btn_gradient_endcolor">#F44336</color>
+    <color name="bordercolor">#F44336</color>
+    <color name="btn_bg_change">#FF9800</color>
+    <color name="btn_gr_strat">#FF9800</color>
+    <color name="btn_gr_end">#FFC107</color>
 </resources>
