--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,14 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-    </style>
+        
+        <item name="android:textViewStyle">
+             @style/stTextViewLabel
+        </item>
+        <item name="android:buttonStyle">@style/stButton</item>
+
+
+            </style>
 
     <style name="Theme.GoLive.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -22,8 +29,8 @@
     <style name="Theme.GoLive.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.GoLive.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-    
-    <style name="stTextView" parent="Widget.AppCompat.TextView">
+
+    <style name="stTextViewLabel" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">17dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
@@ -32,21 +39,28 @@
     </style>
 
 
+    <style name="stCustomTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">20dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">serif</item>
+    </style>
 
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="56dp"
-    android:textColor="@color/white"
-    android:textSize="17sp"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp"
-    android:paddingStart="25dp"
-    android:paddingEnd="25dp"
-    android:focusable="true"
-    android:textAllCaps="false"
-    android:background="@drawable/rounded_btn"
-    android:text="View Reports"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
+    <style name="stButton" parent="Widget.AppCompat.Button">
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:paddingTop">7dp</item>
+        <item name="android:paddingStart">17dp</item>
+        <item name="android:paddingEnd">17dp</item>
+        <item name="android:paddingBottom">7dp</item>
+        <item name="android:layout_marginTop">3dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:background">@drawable/rounded_rectangle_button</item>
+    </style>
+
+
 </resources>
