--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/ic_bg"
+    android:background="@drawable/appbg"
     android:orientation="vertical"
     android:weightSum="3">
 
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_weight="0.5"
+        android:layout_weight="0.3"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -49,7 +49,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.2"
+        android:layout_weight="1.1"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -93,13 +93,12 @@
 
                 <ImageView
                     android:id="@+id/imgSubscoreTeamOne"
-
                     android:layout_width="0dp"
                     android:layout_height="fill_parent"
                     android:layout_weight="0.33"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/thumsdown" />
+                    android:src="@drawable/baseline_remove_circle_24" />
 
                 <TextView
                     android:id="@+id/tvScoreTeamOne"
@@ -116,7 +115,7 @@
                     android:layout_weight="0.33"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/thumsup" />
+                    android:src="@drawable/baseline_add_circle_24" />
 
             </LinearLayout>
         </LinearLayout>
@@ -156,7 +155,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
-                android:layout_weight="1.7"
+                android:layout_weight="1.3"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -190,7 +189,7 @@
                     android:layout_weight="0.33"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/thumsdown" />
+                    android:src="@drawable/baseline_remove_circle_24" />
 
                 <TextView
                     android:id="@+id/tvScoreTeamTwo"
@@ -207,7 +206,7 @@
                     android:layout_weight="0.33"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:src="@drawable/thumsup" />
+                    android:src="@drawable/baseline_add_circle_24" />
 
             </LinearLayout>
         </LinearLayout>
@@ -217,7 +216,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.7"
+        android:layout_weight="2.1"
         android:orientation="vertical">
 
 
@@ -308,6 +307,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="10dp"
             android:weightSum="1">
 
             <Button
