--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,17 @@
     <!-- Base application theme. -->
     <style name="Theme.GoLive" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryVariant">@color/primaryLightColor</item>
+        <item name="colorOnPrimary">@color/btn_bg_change</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/btn_gradient_strtcolor</item>
+        <item name="colorSecondaryVariant">@color/btn_gradient_endcolor</item>
+        <item name="colorOnSecondary">@color/btn_gr_end</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="actionMenuTextColor">@color/primaryDarkColor</item>
+        <item name="android:actionMenuTextColor">@color/primaryDarkColor</item>
         <!-- Customize your theme here. -->
         
         <item name="android:textViewStyle">
@@ -31,7 +33,7 @@
     <style name="Theme.GoLive.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="stTextViewLabel" parent="Widget.AppCompat.TextView">
-        <item name="android:textSize">17dp</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
@@ -40,7 +42,7 @@
 
 
     <style name="stCustomTextView" parent="Widget.AppCompat.TextView">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">15dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/white</item>
@@ -52,13 +54,12 @@
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">17sp</item>
-        <item name="android:paddingTop">7dp</item>
         <item name="android:paddingStart">17dp</item>
         <item name="android:paddingEnd">17dp</item>
-        <item name="android:paddingBottom">7dp</item>
         <item name="android:layout_marginTop">3dp</item>
         <item name="textAllCaps">false</item>
         <item name="fontFamily">sans-serif</item>
+        <item name="android:layout_marginBottom">5dp</item>
         <item name="android:background">@drawable/rounded_rectangle_button</item>
     </style>
 
