--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -17,6 +17,7 @@
         </item>
         <item name="android:buttonStyle">@style/stButton</item>
     </style>
+    <!-- TextView Style Added -->
     <style name="stTextViewLabel" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">15dp</item>
         <item name="android:gravity">center</item>
@@ -24,7 +25,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">sans-serif</item>
     </style>
-
+    <!-- TextView Style Added for subheading -->
 
     <style name="stCustomTextView" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">15dp</item>
@@ -33,7 +34,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">serif</item>
     </style>
-
+    <!-- Buttom Custom Style Added -->
     <style name="stButton" parent="Widget.AppCompat.Button">
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">8dp</item>
